Add gallery page

--- a/css/styles.css
+++ b/css/styles.css
@@ -17492,6 +17492,7 @@ img.appstore-original {
 	background: #fff;
 	border-radius: 10px;
 	box-shadow: 0 10px 25px rgb(0 26 112 / 10%);
+	height: 100%;
 }
 
 .contact-style3 .contact-icon {
