--- a/css/styles.css
+++ b/css/styles.css
@@ -29936,7 +29936,7 @@ nav a#pull {
 }
 
 .review-block {
-	background-image: url("https://jthemes.net/themes/wp/testo/wp-content/uploads/2021/03/reviews-bbq.jpg");
+	background-image: url("../img/menuandother/review.png");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
