--- a/css/styles.css
+++ b/css/styles.css
@@ -14659,7 +14659,7 @@ body.boxed .header.navik-header.sticky {
 
   
 .slider {
-	position: absolute;
+	/* position: absolute; */
 	max-width: 100%;
 	height: 660px;
 }
@@ -18151,6 +18151,7 @@ footer a:hover {
 }
 .address-text p {
 	color: #e3c25f;
+	font-size: .85rem;
 }
 
 /* #footer-3 .footer-copyright p {
