--- a/css/styles.css
+++ b/css/styles.css
@@ -22209,7 +22209,7 @@ nav a#pull {
     /* Hero Slider */
     .slider,
     .slider .slides {
-        height: 380px;
+        height: 100%;
     }
     #hero-3 .slider,
     #hero-6 .slider,
@@ -23483,7 +23483,7 @@ nav a#pull {
     /* Hero Slider */
     .slider,
     .slider .slides {
-        height: 350px;
+        height: 100%;
     }
     #hero-3 .slider,
     #hero-6 .slider,
