--- a/css/styles.css
+++ b/css/styles.css
@@ -27965,3 +27965,4 @@ nav a#pull {
 .whatsappcta {
     background-color: #65a965
 }
+@media only screen and (max-width: 576px) and (orientation: portrait) { .slider { height: 100%; } }
